--- a/angular.json
+++ b/angular.json
@@ -18,6 +18,8 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
+            "allowedCommonJsDependencies": [
+              "bootstrap"],
             "assets": [
               "src/favicon.ico",
               "src/assets"
